ingress/ingress-kanban-v1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kanban-api
  namespace: my-kanban
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - kanban.amnay.fr
    secretName: front-end-tls
  rules:
  - host: kanban.amnay.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: kanban-ui
          servicePort: 80
      - path: /api/v1
        backend:
          serviceName: kanban-api
          servicePort: 80
